--- a/styles/sass/partials/_mediaQuries.scss
+++ b/styles/sass/partials/_mediaQuries.scss
@@ -104,21 +104,52 @@
   }
 
   // willows journey
-  .journeyContainer {
-    .journeyPicContainer {
-      // border: 2px solid red;
-      margin-left: 100px;
+  .journey {
+    padding: 0px;
+    .journeyContainer {
+      .journeyPicContainer {
+        min-width: 100%;
 
-      .journeyImage {
-        width: 80%;
-        margin: 0 auto;
+        .journeyImage {
+          width: 80%;
+          margin: 0 auto;
+        }
+      }
+      .journeyDesc {
+        margin: 70px 0px;
+        text-align: center;
+        a {
+          margin: 0 auto;
+        }
       }
     }
-    .journeyDesc {
-      margin: 70px 0px;
-      text-align: center;
-      a {
-        margin: 0 auto;
+  }
+
+  // gallery
+  .gallery {
+    // border: 2px solid magenta;
+    padding: 30px 0px;
+    margin: 20px 0px;
+    .galleryContainer {
+      .flexContainer {
+        .listItem {
+          margin: 20px 0px 0px 0px;
+          min-width: 100%;
+        }
+      }
+    }
+  }
+
+  //footer
+  .indexFooter {
+    padding: 1rem 0px;
+    .footerContainer {
+      width: 100%;
+      .footerFlexContainer {
+        li {
+          width: 100%;
+          text-align: center;
+        }
       }
     }
   }
@@ -166,7 +197,8 @@
       display: inline-block;
     }
     a {
-      padding: 0 2rem;
+      padding: 0 1rem;
+      font-size: 1.5rem;
     }
   }
 
@@ -206,4 +238,65 @@
       font-size: clamp(50px, 12vw, 100px);
     }
   }
+}
+// *****************************************
+@media (max-width: 650px) {
+  //BLOG styling
+  .blogTitleContainer {
+    .wrapper {
+      min-height: 40vh;
+    }
+  }
+
+  .date {
+    // border: 2px solid black;
+    font-size: 1.6rem;
+    margin: 20px 0px;
+  }
+  .blogMain {
+    p {
+      font-size: 1.8rem;
+      text-align: center;
+      padding: 0px;
+    }
+    .wrapper,
+    .twoAside {
+      width: 100%;
+    }
+  }
+
+  .longBlog {
+    h2 {
+      // border: 2px solid red;
+      font-size: 2.8rem;
+      // margin-bottom: 20px;
+    }
+  }
+
+  .twoViewsContainer {
+    .views {
+      padding: 0px;
+      flex-direction: column;
+
+      .viewImageContainer {
+        img {
+          margin: 0 auto;
+        }
+      }
+    }
+  }
+  // ------end of styling blog section
+
+  // contact styling
+
+  .contactMain .wrapper {
+    // border: 2px solid red;
+    width: 100%;
+    padding: 0px;
+    .socialContainer {
+      margin-top: 0px;
+    }
+  } //end of contact styling
+
+  // index styling
 }
